<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    tools:context="suomi.fi.MainActivity"
    android:orientation="vertical"
    android:padding="10dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/activity_main_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_info"
                style="@style/activity_main_info"/>

            <TextView
                android:id="@+id/activity_main_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_title"
                style="@style/activity_main_title"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/activity_main_button"
                android:text="@string/btn_Counties_and_Municipaties"
                android:onClick="intentCounties"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/activity_main_button"
                android:text="@string/btn_Organizations"
                android:onClick="intentOrganization"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/activity_main_button"
                android:text="@string/btn_Forms"
                android:onClick="intentForms"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/activity_main_button"
                android:text="@string/btn_Links"
                android:onClick="intentLinks"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>