<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="fill_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context="suomi.fi.LinkActivity"
android:padding="10dp">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <WebView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/htmlDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/formButtons">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnExternalurl"
                android:drawableStart="@mipmap/btn_www"
                style="@style/activity_municipatily_button"
                android:text="@string/load_link"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:id="@+id/organizationTitle"
                android:text="@string/link_supplier"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:id="@+id/organizationName"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <Button
                android:id="@+id/btnOrganization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/activity_municipatily_button"
                android:text="@string/show_organization"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/municipalityLayout">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:id="@+id/municipalityTitle"
                    android:text="@string/link_belongs_to_municipality"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:id="@+id/municipalityName"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <Button
                    android:id="@+id/btnMunicipality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/activity_municipatily_button"
                    android:text="@string/show_municipality"/>
                <ListView
                    android:id="@+id/list"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
</LinearLayout>